[Offline pages] Check errors and invalidate pointers only for mainframe for navigation

BUG=704311

Review-Url: https://codereview.chromium.org/2764373004
Cr-Commit-Position: refs/heads/master@{#459263}

Former-commit-id: 69ad9a9d95cdf1ca2e7ffafb03a6e7ffdd74106d